Revert back to Java-11 (Neo4J <-> aQute incompatibility issue)